data layer refactoring, domain layer, presentation layer (mvp, custom view), di (need ref)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
-    <string name="app_name">Cbr</string>
+    <string name="app_name">Конвертер валют</string>
+
+    <!-- CurrencyConvertView text -->
+    <string name="convert">Перевести</string>
+    <string name="equal">=</string>
+    <string name="date_update_format">Дата обновления: %s</string>
+    <!-- Error messages -->
+    <string name="error_curs_not_found">Не удалось получить данные о курсе</string>
+    <string name="error_unknown">Неизвестная ошибка</string>
+    <string name="error_retry_request">Произошла ошибка, повторить запрос?</string>
+    <!-- MainActivity -->
+    <string name="retry">Повторить</string>
+
 </resources>
